syntax = "proto3";

package security;

import "models/security/security.proto";
import "requests/security/security_request.proto";

option java_multiple_files = true;
option java_package = "common.request";
option java_outer_classname = "SecurityResponseProtos";

message SecurityResponseProto {
  string object_class = 1;
  string version = 2;

  security.SecurityRequestProto create_security_request = 20;

  repeated security.SecurityProto security_response = 30;
}


